improvements to look

--- a/week3/day1/netflix_prototype/index.html
+++ b/week3/day1/netflix_prototype/index.html
@@ -5,8 +5,10 @@
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<button type="button" class="button1">Sign In</button>
+  		<center><button type="button" class="button2">Start Your Free Month</button></center>
   		<div class="transbox">
-    	<p>Watch TV Shows movies 
+    	<p>Watch TV Shows &amp movies 
     	anytime, anywhere.</p>
   		</div>
 
@@ -15,6 +17,13 @@
     <img src="images/family.jpg" class="family"/>
     <img src="images/Netflix-logo.png" height="120" width="auto" class="logo"/>
 	</div>
+
+	  <div class="newreleases">
+    	<p>New Releases
+    	</p>
+  		</div>
+	</p>
+
 
 	<p class="moviebox">
 	<div class="movieposter">
@@ -38,10 +47,8 @@
 	<img src="images/movie3.png" height="230" width="auto">
 	</div>
 	</p>
-  	<div class="box bl" id="bottom">
-  	<h3 class="direction"/h3>
-  	</div>
-	</p>
+
 	</body>
-	<footer></footer>
+	<footer>
+	</footer>
 </html>
