added font file

--- a/week3/day1/netflix_prototype/index.html
+++ b/week3/day1/netflix_prototype/index.html
@@ -8,13 +8,13 @@
 <button type="button" class="button1">Sign In</button>
   		<center><button type="button" class="button2">Start Your Free Month</button></center>
   		<div class="transbox">
-    	<p>Watch TV Shows &amp movies 
-    	anytime, anywhere.</p>
+    	<p><strong>Watch TV Shows &amp movies 
+    	anytime, anywhere.</strong></p>
   		</div>
 
 	</div>
 	<div style="position: relative; left: 0; top: 0;">
-    <img src="images/family.jpg" class="family"/>
+    <img src="images/family.jpg" class="family" height="auto" width="1250"/>
     <img src="images/Netflix-logo.png" height="120" width="auto" class="logo"/>
 	</div>
 
