--- a/week3/day1/netflix_prototype/index.html
+++ b/week3/day1/netflix_prototype/index.html
@@ -1,54 +1,49 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+<title></title>
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <button type="button" class="button1">Sign In</button>
-  		<center><button type="button" class="button2">Start Your Free Month</button></center>
-  		<div class="transbox">
-    	<p><strong>Watch TV Shows &amp movies 
+<button type="button" class="button2"><center>Start Your Free Month</center></button>
+	<div class="transbox">
+	<p><strong>Watch TV Shows &amp movies 
     	anytime, anywhere.</strong></p>
-  		</div>
-
 	</div>
+
 	<div style="position: relative; left: 0; top: 0;">
     <img src="images/family.jpg" class="family" height="auto" width="1250"/>
     <img src="images/Netflix-logo.png" height="120" width="auto" class="logo"/>
 	</div>
 
-	  <div class="newreleases">
-    	<p>New Releases
-    	</p>
-  		</div>
+	<div class="newreleases">
+    <p>New Releases</p>
+  	</div>
 	</p>
 
+		<p class="moviebox">
+		<div class="movieposter">
+		<img src="images/movie1.png" height="240" width="auto">
+		</div>
 
-	<p class="moviebox">
-	<div class="movieposter">
-	<img src="images/movie1.png" height="230" width="auto">
-	</div>
+		<div class="movieposter">
+		<img src="images/movie2.png" height="240" width="auto">
+		</div>
 
+		<div class="movieposter">
+		<img src="images/movie3.jpg" height="240" width="auto">
+		</div>
 
-	<div class="movieposter">
-	<img src="images/movie2.png" height="230" width="auto">
-	</div>
+		<div class="movieposter">
+		<img src="images/movie4.png" height="240" width="auto">
+		</div>
 
-	<div class="movieposter">
-	<img src="images/movie3.jpg" height="230" width="auto">
-	</div>
-
-	<div class="movieposter">
-	<img src="images/movie4.png" height="230" width="auto">
-	</div>
-
-	<div class="movieposter">
-	<img src="images/movie3.png" height="230" width="auto">
-	</div>
-	</p>
+		<div class="movieposter">
+		<img src="images/movie3.png" height="240" width="auto">
+		</div>
+		</p>
 
 	</body>
-	<footer>
-	</footer>
+	<footer></footer>
 </html>
