added position:float example in css

--- a/week3/day2/positioning/index.html
+++ b/week3/day2/positioning/index.html
@@ -16,11 +16,15 @@
 </section>
 
 <aside>
+
+<div class="image-wrapper">
 	<code>&#60;aside&#62;</code>
 	<img src="https://media.giphy.com/media/A4m3ZXwulFsbu/giphy.gif">
 	<img src="https://media.giphy.com/media/3orieKglX8CjaX6QKc/giphy.gif">
 	<img src="https://media.giphy.com/media/26tk1JtBlQfJRpEYM/giphy.gif">
 	<img src="https://media.giphy.com/media/AtpqbgBFCemaI/giphy.gif">
+</div>
+
 </aside>
 
 <footer>
