--- a/week3/day2/responsive/index.html
+++ b/week3/day2/responsive/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
+
 	<title> Responsive </title>
 
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/reporter.css">
 </head>
 <body>
-hello!
+	<header class="villain-header">
+	Villains
+	</header>
 </body>
 </html>
