--- a/week3/day1/spotify_clone/index.html
+++ b/week3/day1/spotify_clone/index.html
@@ -6,6 +6,7 @@
 	<title></title>
 
 <link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 </head>
 <body>
 
