added new js buttons

--- a/week5/jquery/index.html
+++ b/week5/jquery/index.html
@@ -22,6 +22,18 @@
         Click here to do something
       </button>
       <br>
+      <button class="js-pizza">Pizza</button>
+
+      <br>
+      <button class="empanadas">Empanadas</button>
+
+      <br>
+      <button id="cookies">Cookies</button>
+      <br>
+
+      <div id="pizza"> I like pizza. </div>
+      <h1 id="title">jQuery Exercises</h1>
+      <button class="js-tacos">Tacos</button>
 
       <small>
         Actually, jQuery and JavaScript let you click anywhere to do things.
