added new jQuery buttoncommands

--- a/week5/jquery/index.html
+++ b/week5/jquery/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="container">
-      <h1> Hello. I'm testing jQuery. </h1>
+      <h1 class="js-heading"> Hello. I'm testing jQuery. </h1>
 
       <p> jQuery is a JavaScript library. </p>
 
@@ -35,7 +35,7 @@
       <h1 id="title">jQuery Exercises</h1>
       <button class="js-tacos">Tacos</button>
 
-      <small>
+      <small class="js-small">
         Actually, jQuery and JavaScript let you click anywhere to do things.
         <strong class="js-change-button-color"> Even here. </strong>
       </small>
