--- a/week5/jquery/index.html
+++ b/week5/jquery/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <h1 class="js-heading"> Hello. I'm testing jQuery. </h1>
 
-      <p> jQuery is a JavaScript library. </p>
+      <p class="js-jq-paragraph"> jQuery is a JavaScript library. </p>
 
       <p> Hi. </p>
 
@@ -34,7 +34,8 @@
       <div id="pizza"> I like pizza. </div>
       <h1 id="title">jQuery Exercises</h1>
       <button class="js-tacos">Tacos</button>
-
+      <br>
+      <button class="js-icecream">Ice Cream</button>
       <small class="js-small">
         Actually, jQuery and JavaScript let you click anywhere to do things.
         <strong class="js-change-button-color"> Even here. </strong>
