all changes I did

--- a/week5/jquery/index.html
+++ b/week5/jquery/index.html
@@ -36,6 +36,16 @@
       <button class="js-tacos">Tacos</button>
       <br>
       <button class="js-icecream">Ice Cream</button>
+      
+    
+      <button class="js-change-unicorn">
+      Change Unicorn
+      </button>
+      <br>
+      <img class="js-unicorn-image" src="images/unicorn2.gif">
+
+
+
       <small class="js-small">
         Actually, jQuery and JavaScript let you click anywhere to do things.
         <strong class="js-change-button-color"> Even here. </strong>
