--- a/week5/jquery/index.html
+++ b/week5/jquery/index.html
@@ -11,13 +11,13 @@
     <script src="js/app.js"></script>
   </head>
   <body>
-    <div class="container">
+    <div class="playable">
       <h1 class="js-heading"> Hello. I'm testing jQuery. </h1>
 
       <p class="js-jq-paragraph"> jQuery is a JavaScript library. </p>
 
       <p> Hi. </p>
-
+      <br>
       <button class="js-button-thing">
         Click here to do something
       </button>
@@ -51,5 +51,11 @@
         <strong class="js-change-button-color"> Even here. </strong>
       </small>
     </div>
+
+<button id="disappear"> Disappear </button>
+
+
+
+
   </body>
 </html>
