--- a/week5/exercise/index.html
+++ b/week5/exercise/index.html
@@ -11,9 +11,8 @@
 </head>
 <body class="container">
 <h1> Phrases Page </h1>
-
-
-
+<p></p>
+<button class="js-phrases">Phrases</button>
 
 </body>
 </html>
