--- a/week5/ajax/index.html
+++ b/week5/ajax/index.html
@@ -3,10 +3,18 @@
 <head>
 	<meta charset="utf-8">
 	<title>Practice AJAX</title>
-</head>
-<body>
-	<h1> Practice AJAX </h1>
+	<link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/styles.css">
 
-	<button> Fetch Characters </button>
+    <script src="js/jquery-3.1.1.js"></script>
+    <script src="js/app.js"></script>
+
+</head>
+<body class="container">
+	<h1> Practice AJAX </h1>
+	
+	<button class="js-fetch-characters"> Fetch Characters </button>
+
+	<ul class="js-character-list"></ul>
 </body>
 </html>
