--- a/week5/ajax/index.html
+++ b/week5/ajax/index.html
@@ -14,7 +14,12 @@
 	<h1> Practice AJAX </h1>
 	
 	<button class="js-fetch-characters"> Fetch Characters </button>
-
+	
+	<form class="js-ackbar-form">
+	<input type="text" class="js-ackbar-weapon">
+	<button>Add Admiral Ackbar</button>
+	</form>
+	
 	<ul class="js-character-list"></ul>
 </body>
 </html>
