added character working form

--- a/week5/ajax/index.html
+++ b/week5/ajax/index.html
@@ -12,14 +12,30 @@
 </head>
 <body class="container">
 	<h1> Practice AJAX </h1>
-	
-	<button class="js-fetch-characters"> Fetch Characters </button>
-	
+	<div>
+	<button class="js-fetch-characters"> Fetch Characters
+	</button>
+	</div>
+	<div>
 	<form class="js-ackbar-form">
 	<input type="text" class="js-ackbar-weapon">
 	<button>Add Admiral Ackbar</button>
 	</form>
+	</div>
 	
+	<div>
+	<form class="js-character-form">
+	<br>
+	Name:
+	<input type="text" class="js-character-name"><br>
+	Weapon:
+	<input type="text" class="js-character-weapon"><br>
+	Occupation:
+	<input type="text" class="js-character-occupation"><br>
+	<button>Add Character</button>
+	</form>
+	</div>
+
 	<ul class="js-character-list"></ul>
 </body>
 </html>
