changed css to terminal look

--- a/week5/spotify-ajax/index.html
+++ b/week5/spotify-ajax/index.html
@@ -18,13 +18,16 @@
 
 <br>
 <div>
-<form class="js-artist-search-form">
+<form class="js-artist-search-form form-group">
 Search:
 <input type="text" class="js-artist-search">
 <button>Artist Search</button>
 </form>
 </div>
 
+<div>
+<ul class="js-artist-result"></ul>
+</div>
 
 
 
