bootstrap css adjustments and changed search results from an <ul> to <div>

--- a/week5/spotify-ajax/index.html
+++ b/week5/spotify-ajax/index.html
@@ -11,22 +11,22 @@
 
 </head>
 <body class="container">
+<div class="jumbotron text-center">
 <h1>Spotify Artist Search</h1>
 
+</div>
 
-
-
+ 
 <br>
 <div>
 <form class="js-artist-search-form form-group">
-Search:
-<input type="text" class="js-artist-search">
-<button>Artist Search</button>
+
+<input type="text" class="form-control js-artist-search">
+<button class="btn">Artist Search</button>
 </form>
 </div>
 
-<div>
-<ul class="js-artist-result"></ul>
+<div class="js-artist-result">
 </div>
 
 
