--- a/week5/geolocation/index.html
+++ b/week5/geolocation/index.html
@@ -12,17 +12,23 @@
 <div class="jumbotron text-center">
 <h1> Geolocation </h1>
 </div>
-
+<div class="col-sm-4">
+	<h3>  Starting Position </h3>
 	<ul>
 		<li>
-		Latitude:
-		<span class="js-lat">???</span>
+		Latitude: <span class="js-lat">???</span>
 		</li>
-
 		<li>
-		Longitude:
-		<span class="js-lng"> ??? </span>
+		Longitude: <span class="js-lng">???</span>
 		</li>
 	</ul>
+</div>
+
+<div class="col-sm-4">
+
+	<h3>  Watched Positions </h3>
+
+	<ul class="js-watch-list"></ul>
+</div>
 </body>
 </html>
