added display album function

--- a/week5/spotify-ajax/index.html
+++ b/week5/spotify-ajax/index.html
@@ -22,7 +22,7 @@
 <form class="js-artist-search-form form-group">
 
 <input type="text" class="form-control js-artist-search">
-<button class="btn">Artist Search</button>
+<button class="btn"><strong>Artist Search</strong></button>
 </form>
 </div>
 
