--- a/week5/spotify-ajax/index.html
+++ b/week5/spotify-ajax/index.html
@@ -25,7 +25,7 @@
 		<div class="js-artist-result">
 		</div>
 
-		<div class="js-album-result">
+		<div class="modal-body">
 		</div>
 	</body>
 </html>
