made modifications to bootstrap

--- a/week5/spotify-ajax/index.html
+++ b/week5/spotify-ajax/index.html
@@ -14,18 +14,16 @@
 			<h1>Spotify Artist Search</h1>
 		</div>
 		<br>
-		<div>
-		<form class="js-artist-search-form form-group">
-
-		<input type="text" class="form-control js-artist-search">
-		<button class="btn"><strong>Artist Search</strong></button>
+		<div class="col-sm-8">
+		<form class="js-artist-search-form form-inline">
+		<input type="text" class="form-control js-artist-search"><button class="btn"><strong>Artist Search</strong></button>
 		</form>
 		</div>
-
+		<p>
 		<div class="js-artist-result">
 		</div>
-
-		<div class="modal-body">
+		</p>
+		<ul></ul>
 		</div>
 	</body>
 </html>
