added bootstrapand  js files

--- a/week5/spotify-player/index.html
+++ b/week5/spotify-player/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 	<title></title>
@@ -7,13 +8,20 @@
     	<script src="js/jquery-3.1.1.js"></script>
     	<script src="js/app.js"></script>
 </head>
-<body>
-	<div class="widget">
+<body class="container">
+	
+	<div class="col-sm-4">
+	<form class="js-song-search-form form-inline">
+	<input type="text" class="form-control js-song-search"><button class="btn"><strong>Song Search</strong></button>
+	</form>
+	</div>
+
+	<div class="col-sm-4 widget">
 		<div class="header">
 		<!-- Try adding/removing these classes: -->
 		<!-- disabled -->
 		<!-- playing -->
-		<div class="btn-play"></div>
+		<div class="btn-play playing"></div>
 
 		<div class="metadata">
 		  <p class="title">Hunger of The Pine</p>
