--- a/week5/spotify-player/index.html
+++ b/week5/spotify-player/index.html
@@ -10,34 +10,36 @@
 </head>
 <body class="container">
 	
-	<div class="col-sm-4">
+	<div>
 	<form class="js-song-search-form form-inline">
 	<input type="text" class="form-control js-song-search"><button class="btn"><strong>Song Search</strong></button>
 	</form>
 	</div>
 
-	<div class="col-sm-4 widget">
+	<div class="widget">
 		<div class="header">
 		<!-- Try adding/removing these classes: -->
 		<!-- disabled -->
 		<!-- playing -->
-		<div class="btn-play playing"></div>
+		<div class="btn-play disabled js-btn-play"></div>
 
 		<div class="metadata">
-		  <p class="title">Hunger of The Pine</p>
-		  <p class="author">alt-J</p>
+		  <p class="js-song-title title"></p>
+		  <p class="js-song-artist author"></p>
 
 		  <div class="seekbar">
 		    <progress value="5" max="30"></progress>
 		  </div>
 		</div>
 		</div>
-		<div class="cover">
-		<img src="https://i.scdn.co/image/04da6dfc1f5f45fdeba938a0cc71cf372524fd43">
+		<div>
+		<img class="js-cover cover" src="https://media.giphy.com/media/x3UYGYDVKTHDq/giphy.gif">
+		
+		</div>
+		<div>
+		<audio class="js-player" src=""></audio>
 		</div>
 
-		<audio src="https://p.scdn.co/mp3-preview/8e9c5ffdc38e91659bfe8b6bd44650dfc25a3d31"></audio>
-	</div>
 
 </body>
 </html>
