--- a/week5/spotify-player/index.html
+++ b/week5/spotify-player/index.html
@@ -3,6 +3,10 @@
 <head>
 	<title>Spotify Player</title>
 		<link rel="stylesheet" href="css/bootstrap.css">
+		<link rel="stylesheet" href="css/bootstrap.js">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+
     	<link rel="stylesheet" href="css/style.css">
 
     	<script src="js/jquery-3.1.1.js"></script>
@@ -10,7 +14,7 @@
 </head>
 <body>
 	<header>
-	<h1><center>Search for Spotify Songs</center></h1>
+	<h1><center>Spotify API Player  <span class="glyphicon glyphicon-headphones" aria-hidden="true"></span></center></h1>
 	</header>
 	<div class="container main">
 	
@@ -18,8 +22,8 @@
 	<form class="col-sm-12 js-song-search-form">
 	<div>
 	
-	<input type="text" class="form-control js-song-search">
-	<button class="btn"><strong>Song Search</strong></button>
+	<input type="text" class="form-control js-song-search" placeholder="Enter Song Title">
+	<button class="btn"><strong>Search</strong> <span class="glyphicon glyphicon-music" aria-hidden="true"></span></button>
 	</div>
 	</form>
 	
@@ -46,6 +50,9 @@
 		</div>
 		</div>
 	</div>
+	</div>
+	<div class="container main">
+	<footer>Made by Jose Perez-Roura</footer>
 	</div>
 </body>
 </html>
