--- a/uxui/lab-css-recipes-clone-master/starter-code/apple-pie-starter-code/index.html
+++ b/uxui/lab-css-recipes-clone-master/starter-code/apple-pie-starter-code/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>Apple Pie Recipe</title>
 </head>
 <body>
+<div class = "apple-pie-pic">
+<div class="pie-text">
 Apple Pies
+</div>
+</div>
 This was my grandmother's apple pie recipe. I have never seen another one
 quite like it. It will always be my favorite and has won me several first place
 prizes in local competitions. I hope it becomes one of your favorites as well!
