--- a/js30/01 - JavaScript Drum Kit/index-START.html
+++ b/js30/01 - JavaScript Drum Kit/index-START.html
@@ -64,6 +64,8 @@
     if(!audio) return;
     audio.currentTime = 0;
     audio.play();
+    console.log(key)
+    key.classList.add('playing')
   });
 </script>
 
