--- a/js30/01 - JavaScript Drum Kit/index-START.html
+++ b/js30/01 - JavaScript Drum Kit/index-START.html
@@ -67,6 +67,14 @@
     console.log(key)
     key.classList.add('playing')
   });
+
+  function removeTransition(e){
+    console.log(e)
+  };
+
+  const keys = document.querySelectorAll('.key');
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+
 </script>
 
 
