remove incorporated to remove transition function

--- a/js30/01 - JavaScript Drum Kit/index-START.html
+++ b/js30/01 - JavaScript Drum Kit/index-START.html
@@ -70,6 +70,8 @@
 
   function removeTransition(e){
     console.log(e)
+    if(e.propertyName !== 'transition')return;
+
   };
 
   const keys = document.querySelectorAll('.key');
