completed sound and border for drum keys

--- a/js30/01 - JavaScript Drum Kit/index-START.html
+++ b/js30/01 - JavaScript Drum Kit/index-START.html
@@ -69,8 +69,10 @@
   });
 
   function removeTransition(e){
-    console.log(e)
-    if(e.propertyName !== 'transition')return;
+    // console.log(e)
+    if(e.propertyName !== 'transform')return;
+    console.log(e.propertyName)
+    this.classList.remove('playing');
 
   };
 
